add example of single page app

--- a/project/docker-compose.yaml
+++ b/project/docker-compose.yaml
@@ -1,8 +1,8 @@
 services:
   db:
     image: postgres
-    volumes:
-      - ./data/db:/var/lib/postgresql/data
+    # volumes:
+    #   - ./data/db:/var/lib/postgresql/data
     environment:
       - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
