--- a/project/backend/requirements.txt
+++ b/project/backend/requirements.txt
@@ -10,3 +10,4 @@ sqlparse==0.5.0 ; python_version >= "3.10" and python_version < "4.0"
 typing-extensions==4.11.0 ; python_version >= "3.10" and python_version < "4.0"
 tzdata==2024.1 ; python_version >= "3.10" and python_version < "4.0" and sys_platform == "win32"
 pytz==2024.1
+pillow==10.3.0
