--- a/project/Makefile
+++ b/project/Makefile
@@ -1,2 +1,10 @@
 all:
 	docker-compose up --build
+
+front :
+	docker compose up --build front 
+
+down :
+	docker compose down --rmi all
+
+.PHONY : all nginx down
