--- a/project/nginx/nginx.conf
+++ b/project/nginx/nginx.conf
@@ -5,6 +5,7 @@ events {
 http {
     server {
         listen 80;
+        include mime.types;
         server_name localhost;
         root /usr/share/nginx/html;
 
