--- a/project/backend/pyproject.toml
+++ b/project/backend/pyproject.toml
@@ -11,6 +11,10 @@ Django = "^5.0.4"
 psycopg2-binary = "^2.9.9"
 django-ninja = "^1.1.0"
 django-cors-headers = "^4.3.1"
+nanoid = "^2.0.0"
+pytz = "^2024.1"
+pillow = "^10.4.0"
+faker = "^26.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pydantic = "^2.7.1"
