--- a/project/nginx/Dockerfile
+++ b/project/nginx/Dockerfile
@@ -1,8 +1,6 @@
 FROM nginx
 
-COPY nginx.conf /etc/nginx/nginx.conf
-
-COPY ./frontend/ /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/default.conf
 
 EXPOSE 80
 
