--- a/project/backend/requirements.txt
+++ b/project/backend/requirements.txt
@@ -3,12 +3,15 @@ asgiref==3.8.1 ; python_version >= "3.10" and python_version < "4.0"
 django-cors-headers==4.3.1 ; python_version >= "3.10" and python_version < "4.0"
 django-ninja==1.1.0 ; python_version >= "3.10" and python_version < "4.0"
 django==5.0.4 ; python_version >= "3.10" and python_version < "4.0"
+faker==26.0.0 ; python_version >= "3.10" and python_version < "4.0"
 nanoid==2.0.0 ; python_version >= "3.10" and python_version < "4.0"
 pillow==10.4.0 ; python_version >= "3.10" and python_version < "4.0"
 psycopg2-binary==2.9.9 ; python_version >= "3.10" and python_version < "4.0"
 pydantic-core==2.18.2 ; python_version >= "3.10" and python_version < "4.0"
 pydantic==2.7.1 ; python_version >= "3.10" and python_version < "4.0"
+python-dateutil==2.9.0.post0 ; python_version >= "3.10" and python_version < "4.0"
 pytz==2024.1 ; python_version >= "3.10" and python_version < "4.0"
+six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
 sqlparse==0.5.0 ; python_version >= "3.10" and python_version < "4.0"
 typing-extensions==4.11.0 ; python_version >= "3.10" and python_version < "4.0"
 tzdata==2024.1 ; python_version >= "3.10" and python_version < "4.0" and sys_platform == "win32"
