--- a/project/docker-compose.yaml
+++ b/project/docker-compose.yaml
@@ -52,6 +52,7 @@ services:
     ports:
       - '8002:80'
     volumes:
+      - './nginx/frontend:/usr/share/nginx/html'
       - ./nginx:/etc/nginx/conf.d
     networks:
       - frontend
