--- a/project/nginx/nginx.conf
+++ b/project/nginx/nginx.conf
@@ -10,7 +10,7 @@ http {
         root /usr/share/nginx/html;
 
         location / {
-            add_header 'Access-Control-Allow-Origin' '*';
+            #add_header 'Access-Control-Allow-Origin' '*';
             try_files $uri $uri/ /index.html;
         }
     }
