--- a/project/nginx/nginx.conf
+++ b/project/nginx/nginx.conf
@@ -1,24 +1,14 @@
+include /etc/nginx/mime.types;
+server {
+    listen 80;
+    root /frontend/;
 
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
 
-# events {
-#     worker_connections 1024;
-# }
-
-http {
-    server {
-        listen 80;
-        include mime.types;
-        server_name localhost;
-        root /usr/share/nginx/html;
-
-        location / {
-            #add_header 'Access-Control-Allow-Origin' '*';
-            try_files $uri $uri/ /index.html;
-        }
-
-        location /api/ {
-            #  proxy pass without /api
-            proxy_pass http://backend:8000/;
-        }
+    location /api/ {
+        #  proxy pass without /api
+        proxy_pass http://backend:8000/;
     }
 }
