--- a/project/backend/requirements.txt
+++ b/project/backend/requirements.txt
@@ -1,17 +1,47 @@
 annotated-types==0.6.0 ; python_version >= "3.10" and python_version < "4.0"
 asgiref==3.8.1 ; python_version >= "3.10" and python_version < "4.0"
+async-timeout==4.0.3 ; python_version >= "3.10" and python_full_version < "3.11.3"
+attrs==23.2.0 ; python_version >= "3.10" and python_version < "4.0"
+autobahn==23.6.2 ; python_version >= "3.10" and python_version < "4.0"
+automat==22.10.0 ; python_version >= "3.10" and python_version < "4.0"
+cffi==1.16.0 ; python_version >= "3.10" and python_version < "4.0" and platform_python_implementation != "PyPy"
+channels-redis==4.2.0 ; python_version >= "3.10" and python_version < "4.0"
+channels==4.1.0 ; python_version >= "3.10" and python_version < "4.0"
+channels[daphne]==4.1.0 ; python_version >= "3.10" and python_version < "4.0"
+constantly==23.10.4 ; python_version >= "3.10" and python_version < "4.0"
+cryptography==43.0.0 ; python_version >= "3.10" and python_version < "4.0"
+daphne==4.1.2 ; python_version >= "3.10" and python_version < "4.0"
 django-cors-headers==4.3.1 ; python_version >= "3.10" and python_version < "4.0"
 django-ninja==1.1.0 ; python_version >= "3.10" and python_version < "4.0"
 django==5.0.4 ; python_version >= "3.10" and python_version < "4.0"
 faker==26.0.0 ; python_version >= "3.10" and python_version < "4.0"
+hyperlink==21.0.0 ; python_version >= "3.10" and python_version < "4.0"
+idna==3.7 ; python_version >= "3.10" and python_version < "4.0"
+incremental==22.10.0 ; python_version >= "3.10" and python_version < "4.0"
+markdown-it-py==3.0.0 ; python_version >= "3.10" and python_version < "4.0"
+mdurl==0.1.2 ; python_version >= "3.10" and python_version < "4.0"
+msgpack==1.0.8 ; python_version >= "3.10" and python_version < "4.0"
 nanoid==2.0.0 ; python_version >= "3.10" and python_version < "4.0"
 pillow==10.4.0 ; python_version >= "3.10" and python_version < "4.0"
 psycopg2-binary==2.9.9 ; python_version >= "3.10" and python_version < "4.0"
+pyasn1-modules==0.4.0 ; python_version >= "3.10" and python_version < "4.0"
+pyasn1==0.6.0 ; python_version >= "3.10" and python_version < "4.0"
+pycparser==2.22 ; python_version >= "3.10" and python_version < "4.0" and platform_python_implementation != "PyPy"
 pydantic-core==2.18.2 ; python_version >= "3.10" and python_version < "4.0"
 pydantic==2.7.1 ; python_version >= "3.10" and python_version < "4.0"
+pygments==2.17.2 ; python_version >= "3.10" and python_version < "4.0"
+pyopenssl==24.2.1 ; python_version >= "3.10" and python_version < "4.0"
 python-dateutil==2.9.0.post0 ; python_version >= "3.10" and python_version < "4.0"
 pytz==2024.1 ; python_version >= "3.10" and python_version < "4.0"
+redis==5.0.7 ; python_version >= "3.10" and python_version < "4.0"
+rich==13.7.1 ; python_version >= "3.10" and python_version < "4.0"
+service-identity==24.1.0 ; python_version >= "3.10" and python_version < "4.0"
+setuptools==71.1.0 ; python_version >= "3.10" and python_version < "4.0"
 six==1.16.0 ; python_version >= "3.10" and python_version < "4.0"
 sqlparse==0.5.0 ; python_version >= "3.10" and python_version < "4.0"
+twisted-iocpsupport==1.0.4 ; python_version >= "3.10" and python_version < "4.0" and platform_system == "Windows"
+twisted[tls]==24.3.0 ; python_version >= "3.10" and python_version < "4.0"
+txaio==23.1.1 ; python_version >= "3.10" and python_version < "4.0"
 typing-extensions==4.11.0 ; python_version >= "3.10" and python_version < "4.0"
 tzdata==2024.1 ; python_version >= "3.10" and python_version < "4.0" and sys_platform == "win32"
+zope-interface==6.4.post2 ; python_version >= "3.10" and python_version < "4.0"
