setting up game

--- a/project/backend/.devcontainer/docker-compose.yml
+++ b/project/backend/.devcontainer/docker-compose.yml
@@ -30,6 +30,12 @@ services:
     ports:
       - 5467:5432
 
+  redis:
+    image: redis:latest
+    restart: unless-stopped
+    ports:
+      - 6800:6379
+
     # Add "forwardPorts": ["5432"] to **devcontainer.json** to forward PostgreSQL locally.
     # (Adding the "ports" property to this file will not forward from a Codespace.)
 
