--- a/project/backend/requirements.txt
+++ b/project/backend/requirements.txt
@@ -45,3 +45,4 @@ txaio==23.1.1 ; python_version >= "3.10" and python_version < "4.0"
 typing-extensions==4.11.0 ; python_version >= "3.10" and python_version < "4.0"
 tzdata==2024.1 ; python_version >= "3.10" and python_version < "4.0" and sys_platform == "win32"
 zope-interface==6.4.post2 ; python_version >= "3.10" and python_version < "4.0"
+python-logstash==0.4.8
