--- a/project/docker-compose.yaml
+++ b/project/docker-compose.yaml
@@ -1,3 +1,6 @@
+# include:
+#   - elk/docker-compose.yml
+
 services:
   db:
     image: postgres
@@ -11,6 +14,8 @@ services:
       - '5439:5432'
     networks:
       - backend
+    depends_on:
+      - elasticsearch
 
   backend: 
     build: backend
