--- a/project/nginx/nginx.conf
+++ b/project/nginx/nginx.conf
@@ -10,5 +10,15 @@ server {
     location /api/ {
         #  proxy pass without /api
         proxy_pass http://backend:8000/;
+        
+    }
+
+    location /ws/ {
+        proxy_pass http://backend:8000/ws/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
     }
 }
