--- a/project/backend/pyproject.toml
+++ b/project/backend/pyproject.toml
@@ -18,6 +18,7 @@ faker = "^26.0.0"
 channels = {extras = ["daphne"], version = "^4.1.0"}
 channels-redis = "^4.2.0"
 rich = "^13.7.1"
+websockets = "^13.1"
 
 [tool.poetry.group.dev.dependencies]
 pydantic = "^2.7.1"
