--- a/project/nginx/Dockerfile
+++ b/project/nginx/Dockerfile
@@ -1,5 +1,13 @@
 FROM nginx
 
+RUN apt-get update && apt-get install -y openssl
+
+
+RUN mkdir -p /etc/nginx/cert
+RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
+-subj "/C=TH/ST=Bangkok/L=Bangkok/O=42Bangkok/OU=nwattana/CN=nwattana.42.fr" \
+-keyout /etc/nginx/cert/inception.key -out /etc/nginx/cert/inception.crt
+
 COPY nginx.conf /etc/nginx/default.conf
 
 EXPOSE 80
