--- a/project/elk/logstash/logstash.conf
+++ b/project/elk/logstash/logstash.conf
@@ -24,18 +24,18 @@ input {
   }
 }
 
-# filter {
-#   # Set the index name dynamically based on the tag
-#   if "backend" in [tags] {
-#     mutate {
-#       add_field => { "[@metadata][index]" => "backend-logs-%{+YYYY.MM.dd}" }
-#     }
-#   } else if "database" in [tags] {
-#     mutate {
-#       add_field => { "[@metadata][index]" => "database-accounts" }
-#     }
-#   }
-# }
+filter {
+  # Set the index name dynamically based on the tag
+  if "backend" in [tags] {
+    mutate {
+      add_field => { "[@metadata][index]" => "backend-logs-%{+YYYY.MM.dd}" }
+    }
+  } else if "database" in [tags] {
+    mutate {
+      add_field => { "[@metadata][index]" => "database-accounts" }
+    }
+  }
+}
 
 output {
   if "backend" in [tags] {
