--- a/project/docker-compose.yaml
+++ b/project/docker-compose.yaml
@@ -1,19 +1,18 @@
-# include:
-#   - elk/docker-compose.yml
+include:
+  - elk/docker-compose.yml
 
 services:
   db:
     image: postgres
     # volumes:
     #   - ./data/db:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_DB=postgres
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+    env_file:
+      - .env
     ports:
-      - '5439:5432'
+      - '5432:5432'
     networks:
       - backend
+      - elastic
 
   backend: 
     build: backend
@@ -23,7 +22,7 @@ services:
       - ./backend:/app
     depends_on:
       - db
-      # - logstash
+      - logstash
     networks:
       - backend
     env_file:
@@ -32,8 +31,8 @@ services:
   nginx:
     build: nginx
     ports:
-      - '443:443'
-      - '80:80'
+      - '4443:443'
+      - '8080:80'
     volumes:
       - ./nginx:/etc/nginx/conf.d
       - ./frontend:/frontend/
@@ -46,10 +45,20 @@ services:
   redis:
     image: redis:latest
     restart: unless-stopped
-    ports:
-      - 6801:6379
+    # ports:
+    #   - 6801:6379
     networks:
       - backend
+      - elastic
+
+  # adminer:
+  #   image: adminer
+  #   restart: always
+  #   ports:
+  #     - 8081:8080
+  #   networks:
+  #     - backend
+  #     - frontend
 
 networks:
   backend:
