--- a/project/docker-compose.yaml
+++ b/project/docker-compose.yaml
@@ -1,5 +1,5 @@
-include:
-  - elk/docker-compose.yml
+# include:
+#   - elk/docker-compose.yml
 
 services:
   db:
@@ -12,7 +12,7 @@ services:
       - '5432:5432'
     networks:
       - backend
-      - elastic
+      # - elastic
 
   backend: 
     build: backend
@@ -22,7 +22,7 @@ services:
       - ./backend:/app
     depends_on:
       - db
-      - logstash
+      # - logstash
     networks:
       - backend
     env_file:
@@ -49,7 +49,7 @@ services:
     #   - 6801:6379
     networks:
       - backend
-      - elastic
+      # - elastic
 
   # adminer:
   #   image: adminer
